Fix en taille XS

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projet Integration DUROY</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cantarell&display=swap" rel="stylesheet"> 
   <script src="https://kit.fontawesome.com/fc39227cbc.js" crossorigin="anonymous"></script>
 </head>
 
@@ -177,7 +179,7 @@
        
     </div>
 
-    <button> Go to Next Page </button>
+    <button class="next"> Go to Next Page <i class="fas fa-forward"></i></button>
     
 </body>
 </html>
