README + Factorisation de code

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">WEB DEVELOPMENT, BLOGGING</h2>
+                <h2 class="postCategory">WEB DEVELOPMENT, BLOGGING</h2>
                 <img class="postHeader" src="img/activate-google-amp.png"  alt="Photo Google">
                 <div class="postInfoContainer">
                         <h1>How to activate Google's AMP and what they are</h1>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">GUEST POST</h2>
+                <h2 class="postCategory">GUEST POST</h2>
                 <img class="postHeader" src="img/be-delivery-driver.jpg" alt="Deliverooo">
                 <div class="postInfoContainer"> 
                         <h1>Tough time finding a job ? Consider being a delivery drive</h1>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">WEB DEVELOPMENT</h2>
                 <img class="postHeader" src="img/reactjs-passdata.jpg" alt="React">
                 <div class="postInfoContainer">
                         <h1>React quick overview and nested components</h1>
@@ -93,7 +93,7 @@
         </div>
         
         <div class="blogPostContainer">
-                <h2 class="category">GUEST POST, WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">GUEST POST, WEB DEVELOPMENT</h2>
                 <img class="postHeader" src="img/drake-no-js-drake-yes-ts.png" alt="JS">
                 <div class="postInfoContainer">
                         <h1>3 must have tools for javascript app development programmers who do not love javascript</h1>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="blogPostContainer">
-                <h2 class="category">WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">WEB DEVELOPMENT</h2>
                 <img class="postHeader" src="img/build-publish-ionic-app.png" alt="Ionic">
                 <div class="postInfoContainer">
                         <h1>Build and publish a Ionic App</h1>
@@ -117,7 +117,7 @@
         </div>
 
         <div class="blogPostContainer">
-                <h2 class="category">APP DEVELOPMENT, WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">APP DEVELOPMENT, WEB DEVELOPMENT</h2>
                 <img class="postHeader" src="img/splash.jpg" alt="Ionic">
                 <div class="postInfoContainer">
                         <h1>Build an publish a Ionic App - Generate icon and splash images</h1>
@@ -129,7 +129,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">WEB DEVELOPMENT, BLOGGING</h2>
+                <h2 class="postCategory">WEB DEVELOPMENT, BLOGGING</h2>
                 <img class="postHeader" src="img/wordpress-jekyll.png" alt="Jekyll">
                 <div class="postInfoContainer">
                         <h1>Migrate a blog from wordpress to Jekyll</h1>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">APP DEVELOPMENT, WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">APP DEVELOPMENT, WEB DEVELOPMENT</h2>
                 <img class="postHeader" src="img/live_update.jpg" alt="Ionic">
                 <div class="postInfoContainer">
                         <h1>Build an publish a Ionic App - Live update of Firebase backend with AngularJS</h1>
@@ -153,7 +153,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">APP DEVELOPMENT, WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">APP DEVELOPMENT, WEB DEVELOPMENT</h2>
                 <img class="postHeader" src="img/Cordova_Alaska_aerial_view.jpg" alt="Ionic">
                 <div class="postInfoContainer">
                         <h1>Build and publish a Ionic App - Cordova plugins</h1>
@@ -165,7 +165,7 @@
         </div>
 
         <div class="blogPostContainer large">
-                <h2 class="category">WEB DEVELOPMENT</h2>
+                <h2 class="postCategory">WEB DEVELOPMENT</h2>
                 <img  class="postHeader" src="img/stuttgart-1598427_1920.jpg" alt="FREEEEEE">
                 <div class="postInfoContainer">
                         <h1>Free pratical courses to learn about modern web development</h1>
